# pydata-bcn-dbt-fal

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  README.md  docker-compose.databases.yml  docker-compose.dev.yml  docker-compose.metabase.yml  docker-compose.novu.yml  docker-compose.openmetadata.yml  docker-compose.yml  example.env  pyproject.toml  ruff.toml  sample.env  sample.profiles.yml  servers.json
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
assets/: Perfiles_iniciales_de_consumo_y_demanda_de_referencia_2023.xlsx
assets/datasets/processed/: ree-demand-profiles.csv  ree-demand-profiles.feather
assets/datasets/raw/: Perfiles_iniciales_de_consumo_y_demanda_de_referencia_2023.csv
containers/dev_env/: dbt_profiles.yml
containers/metabase/: config.yml
containers/pgadmin/: servers.json
notebooks/: 01-ree-data-analysis.ipynb  02-prophet-forecast.ipynb  03-trigger-novu-warning.ipynb
pydata_bcn_dbt/: dbt_project.yml  fal_project.yml  packages.yml  selectors.yml
pydata_bcn_dbt/models/example/: my_first_dbt_model.sql  schema.yml
pydata_bcn_dbt/models/fal_examples/: forecast.py  notify.py  sales.py  schema.yml
pydata_bcn_dbt/models/ree/: demand_ree.py  forecast_ree.py  forecast_ree_incremental.sql  schema.yml
pydata_bcn_dbt_fal/: main.py
utils/: generate_diagram.py
