[tool.poetry]
name = "pydata-bcn-dbt-fal"
version = "0.1.0"
description = "A self-contained dbt project that utilizes fal and other goodies"
authors = ["Diego Quintana <daquintanav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9, <3.12.0"
dbt-postgres = "^1.4.0"
dbt-fal = { extras = ["postgres"], version = "^1.4.7" }
prophet = "^1.1.2"
holidays = "^0.23"
plotly = "^5.14.1"
kaleido = "0.2.1"
novu = "^1.2.0"
python-decouple = "^3.8"
re-data = "^0.10.7"
cowsay = "^5.0"
seaborn = "^0.12.2"
pyarrow = "^12.0.0"
tqdm = "^4.65.0"
nbformat = "^5.8.0"
ipython = "^8.13.2"
ipywidgets = "^8.0.6"
diagrams = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "<23.3.0"
pre-commit = "^3.2.2"
ruff = "^0.0.261"
isort = "^5.12.0"
git-changelog = "^1.0.0"
shandy-sqlfmt = { extras = ["jinjafmt"], version = "^0.18.0" }
ipykernel = "^6.23.1"

[tool.poetry.group.dbt-docs.dependencies]
dbt-postgres = "^1.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
line-length = 79
target-version = ['py38']
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
(
  /(
	  \.eggs         # exclude a few common directories in the
	| \.git          # root of the project
	| \.hg
	| \.mypy_cache
	| \.tox
	| \.venv
	| _build
	| buck-out
	| build
	| dist
  )/
)
'''
